[package]
name = "conmon"
version = "2.0.30"
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
anyhow = "1.0.44"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
derive_builder = { git = "https://github.com/colin-kiegel/rust-derive-builder" }
env_logger = "0.9.0"
getset = "0.1.1"
glib-sys = "0.14.0"
libc = "0.2.104"
log = { version = "0.4.14", features = ["serde", "std"] }
nix = "0.23.0"
serde = { version = "1.0.130", features = ["derive"] }
strum = { version = "0.22.0", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.44"
